--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@nrwl/jest": "15.0.0",
     "@nrwl/linter": "15.0.0",
     "@nrwl/next": "^15.0.0",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^15.0.0",
     "@nrwl/react": "15.0.0",
     "@nrwl/web": "15.0.0",
     "@nrwl/workspace": "15.0.0",
