--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,8 +12,8 @@ jobs:
     with:
       number-of-agents: 3
       parallel-commands: |
-        yarn nx-cloud record -- npx nx workspace-lint
-        yarn nx-cloud record -- npx nx format:check
+        yarn nx-cloud record -- yarn nx workspace-lint
+        yarn nx-cloud record -- yarn nx format:check
       parallel-commands-on-agents: |
         yarn nx affected --target=lint --parallel=3
         yarn nx affected --target=test --parallel=3 --ci --code-coverage
