--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@nrwl/eslint-plugin-nx": "15.0.0",
     "@nrwl/jest": "15.0.0",
     "@nrwl/linter": "15.0.0",
-    "@nrwl/next": "^15.0.0",
-    "@nrwl/nx-cloud": "^15.0.0",
+    "@nrwl/next": "15.0.0",
+    "@nrwl/nx-cloud": "15.0.0",
     "@nrwl/react": "15.0.0",
     "@nrwl/web": "15.0.0",
     "@nrwl/workspace": "15.0.0",
